# schunk_lwa4p

./: README.md
lwa4p_blue_control/: CMakeLists.txt  package.xml
lwa4p_blue_control/include/lwa4p_blue_control/: adaptiveImpedanceControl.h  adaptive_pd.h  forceAmplitude.h  lwa4pBlueControl.h
lwa4p_blue_control/nodes/: forceAmplitudeNode.cpp  lwa4pBlueAdaptiveControlNode.cpp  lwa4pBlueControlNode.cpp  moveRobot.py
lwa4p_blue_control/scripts/: publish_point.py  robotTest.py
lwa4p_blue_control/src/: adaptiveImpedanceControl.cpp  adaptive_pd.cpp  forceAmplitude.cpp  lwa4pBlueControl.cpp  pid_controller_base.cpp
schunk_lwa4p_kinematics/: CMakeLists.txt  package.xml
schunk_lwa4p_kinematics/config/: lwa4p_configuration-ORIGINAL PARAMS.yaml  lwa4p_configuration.yaml
schunk_lwa4p_kinematics/include/schunk_lwa4p_kinematics/: current_position.h  gui_control.h  lwa4p_kinematics.h  lwa4p_kinematics_test.h
schunk_lwa4p_kinematics/nodes/: currentPositionNode.cpp  guiControlNode.cpp  kinematicsTestNode.cpp
schunk_lwa4p_kinematics/src/: current_position.cpp  gui_control.cpp  lwa4p_kinematics.cpp  lwa4p_kinematics_test.cpp
schunk_lwa4p_kinematics/src/matlab examples/: dk_schunk_lwa4p.m  ik_lwa4p_closest.m  ik_schunk_lwa4p.m
schunk_lwa4p_sim/schunk_lwa4p_control/: CMakeLists.txt  package.xml
schunk_lwa4p_sim/schunk_lwa4p_control/config/: lwa4p_blue_controller.yaml  lwa4p_red_controller.yaml
schunk_lwa4p_sim/schunk_lwa4p_control/launch/: lwa4p_blue_controller.launch  lwa4p_red_controller.launch
schunk_lwa4p_sim/schunk_lwa4p_description/: CMakeLists.txt  package.xml
schunk_lwa4p_sim/schunk_lwa4p_description/launch/: upload_lwa4p_blue.launch  upload_lwa4p_red.launch  upload_wall.launch
schunk_lwa4p_sim/schunk_lwa4p_description/meshes/lwa4p_blue/: arm_2_link.dae  arm_3_link.dae  arm_4_link.dae  arm_base_link.dae
schunk_lwa4p_sim/schunk_lwa4p_description/meshes/lwa4p_red/: arm_1_link.dae  arm_5_link.dae  arm_6_link.dae  polukugla.stl  polukugla_obojana.dae  polukugla_obojana2.dae
schunk_lwa4p_sim/schunk_lwa4p_description/urdf/: materials.urdf.xacro  schunk_lwa4p_blue.urdf.xacro  schunk_lwa4p_red.urdf.xacro  wall.urdf.xacro
schunk_lwa4p_sim/schunk_lwa4p_description/urdf/lwa4p_blue/: lwa4p_blue.gazebo.xacro  lwa4p_blue.transmission.xacro  lwa4p_blue.urdf.xacro
schunk_lwa4p_sim/schunk_lwa4p_description/urdf/lwa4p_red/: lwa4p_red.gazebo.xacro  lwa4p_red.transmission.xacro  lwa4p_red.urdf.xacro
schunk_lwa4p_sim/schunk_lwa4p_gazebo/: CMakeLists.txt  package.xml
schunk_lwa4p_sim/schunk_lwa4p_gazebo/launch/: adaptive_wall.launch  adaptive_wall_no_sim.launch  blue_wall.launch  dual_bringup_control.launch  lwa4p_blue_bringup.launch  lwa4p_dual_bringup.launch  lwa4p_red_bringup.launch
schunk_lwa4p_trajectory/: CMakeLists.txt  package.xml
schunk_lwa4p_trajectory/config/: robotLimits.yaml
schunk_lwa4p_trajectory/include/schunk_lwa4p_trajectory/: hoCookTrajectory.h
schunk_lwa4p_trajectory/msg/: TrajectorySampled.msg  Waypoint.msg  WaypointArray.msg
schunk_lwa4p_trajectory/nodes/: trajectoryPlanningNode.cpp
schunk_lwa4p_trajectory/scripts/: SchunkWallDistance.py  listenTrajectory.py  moveRobot.py  publish_waypoints1.py
schunk_lwa4p_trajectory/src/: hoCookTrajectory.cpp
